--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body id="acTable">
+<body>
+	<div id="acTable"></div>
 </body>
 </html>
